--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body{
     border: 10px solid #f1eeee;
     clear: both;
     height: 80vh;
-    background-image: url("img/lobo.jpg");
+    background-image: url("img/dog.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
